--- a/asg5/dinner-invitation.html
+++ b/asg5/dinner-invitation.html
@@ -184,27 +184,27 @@
 <body>
     <div class="dinner-container">
         <header class="dinner-header">
-            <h1 class="dinner-title">An Extraordinary Dinner Invitation</h1>
-            <p class="tagline">Join me for an unforgettable evening with three remarkable guests</p>
+            <h1 class="dinner-title">Dinner Invitation !<3</h1>
+            <p class="tagline">Join me for an unforgettable evening with three remarkable guests. The Menu will be filled with delicious cuisine from my culture!</p>
         </header>
 
         <section class="guests-section">
             <div class="guest-card">
-                <img src="https://images.unsplash.com/photo-1587590227261-2e0ccadfafcf?ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=80" alt="Frida Kahlo" class="guest-image">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/0/06/Frida_Kahlo%2C_by_Guillermo_Kahlo.jpg" alt="Frida Kahlo" class="guest-image">
                 <h2 class="guest-name">Frida Kahlo</h2>
                 <p>Frida Kahlo was a Mexican painter known for her many portraits, self-portraits, and works inspired by the nature and artifacts of Mexico. Her work was influenced by indigenous Mexican culture and European artistic traditions.</p>
                 <p>I would love to have Frida over because her resilience in the face of physical and emotional pain is incredibly inspiring. I'm fascinated by her unique perspective on life, art, and identity, and I'd love to discuss how she transformed suffering into beautiful, meaningful art.</p>
             </div>
             
             <div class="guest-card">
-                <img src="https://images.unsplash.com/photo-1584820927498-cfe5211fd8bf?ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=80" alt="Leonardo da Vinci" class="guest-image">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/c/c2/Leonardo_da_Vinci_-_presumed_self-portrait_-_WGA12798.jpg" alt="Leonardo da Vinci" class="guest-image">
                 <h2 class="guest-name">Leonardo da Vinci</h2>
                 <p>Leonardo da Vinci was an Italian polymath of the High Renaissance who was active as a painter, draughtsman, engineer, scientist, theorist, sculptor, and architect.</p>
                 <p>Having Leonardo at my dinner table would be a dream come true. His unparalleled curiosity and ability to excel in both arts and sciences is something I deeply admire. I'd love to ask him about his creative process and how he managed to bridge the worlds of art and science so seamlessly.</p>
             </div>
             
             <div class="guest-card">
-                <img src="https://images.unsplash.com/photo-1545239351-ef35f43d514b?ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=80" alt="Michelle Obama" class="guest-image">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/4/4b/Michelle_Obama_2013_official_portrait.jpg" alt="Michelle Obama" class="guest-image">
                 <h2 class="guest-name">Michelle Obama</h2>
                 <p>Michelle Obama is an American attorney and author who served as the first lady of the United States from 2009 to 2017. She is a graduate of Princeton University and Harvard Law School.</p>
                 <p>I admire Michelle Obama for her grace, intelligence, and commitment to important social causes. Her initiatives on education, health, and poverty have made a real difference. I'd love to hear her perspectives on leadership, public service, and balancing family life with public responsibilities.</p>
@@ -212,12 +212,13 @@
         </section>
 
         <section class="menu-section">
-            <h2 class="menu-title">Evening Menu</h2>
+            <h2 class="menu-title">Korean Feast Menu</h2>
             <ul class="menu-list">
-                <li><strong>Appetizers:</strong> Bruschetta with heirloom tomatoes, smoked salmon crostini, and stuffed mushrooms</li>
-                <li><strong>Main Course:</strong> Herb-crusted rack of lamb with roasted vegetables and truffle mashed potatoes</li>
-                <li><strong>Dessert:</strong> Dark chocolate fondue with fresh fruits and homemade churros</li>
-                <li><strong>Beverages:</strong> Selection of fine wines, craft cocktails, and non-alcoholic artisanal drinks</li>
+                <li><strong class="korean-theme">Appetizers (전채):</strong> Kimchi pancakes (김치전), Korean fried chicken (양념치킨), and vegetable mandu (만두)</li>
+                <li><strong class="korean-theme">Main Course (주요리):</strong> Galbi (beef short ribs), bulgogi (marinated beef), bibimbap (mixed rice bowl), and samgyeopsal (pork belly)</li>
+                <li><strong class="korean-theme">Side Dishes (반찬):</strong> Assorted banchan including various kimchi, spinach namul, bean sprouts, and seasoned cucumbers</li>
+                <li><strong class="korean-theme">Dessert (후식):</strong> Bingsu (shaved ice dessert), yakgwa (honey cookies), and fresh fruit platter</li>
+                <li><strong class="korean-theme">Beverages (음료):</strong> Soju, makgeolli (rice wine), Korean beer, and traditional Korean teas</li>
             </ul>
         </section>
 
