--- a/asg5/dinner-invitation.html
+++ b/asg5/dinner-invitation.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dinner Invitation | Special Guests</title>
     <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Dosis:wght@400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <style>
         /* Additional styles specific to the dinner invitation page */
         .dinner-container {
