--- a/asg6/index.html
+++ b/asg6/index.html
@@ -19,7 +19,7 @@
         <main>
             <section class="hat-section">
                 <div class="hat-header">
-                    <img src="images/bluehat.jpg" alt="Blue Hat" class="hat-icon">
+                    <img src="images/bluehat.webp" alt="Blue Hat" class="hat-icon">
                     <h3 class="blue-hat">Blue Hat (Process Control)</h3>
                 </div>
                 <p>I explained the Six Hats method to my partner, a fellow student who understands the constraints of a class project. Wearing the Blue Hat, I set the goal: to critically evaluate the "Study Haven" concept as a manageable, one-person website built within a single semester. We agreed to focus on what is feasible for a solo developer with limited time and budget, and to prioritize the core features that deliver the most value without being overly complex.</p>
@@ -27,7 +27,7 @@
 
             <section class="hat-section">
                 <div class="hat-header">
-                    <img src="images/whitehat.jpg" alt="White Hat" class="hat-icon">
+                    <img src="images/whitehat.webp" alt="White Hat" class="hat-icon">
                     <h3 class="white-hat">White Hat (Facts & Information)</h3>
                 </div>
                 <p>Under the White Hat, we looked at the facts. The core idea is a static website with a database of study spots. The key facts are that I, as a single developer, have the skills to build this using basic web development tools (HTML, CSS, JavaScript) and can host it for free on a platform like GitHub Pages or Netlify. The major information gap is how to populate the database. We concluded that manually researching and entering 20-30 locations around my own campus is the only realistic path. The "real-time crowding" and "user-submitted photos/reviews" are not feasible for this scope, as they require complex back-end systems, user authentication, and constant moderation.</p>
@@ -43,7 +43,7 @@
 
             <section class="hat-section">
                 <div class="hat-header">
-                    <img src="images/yellowhat.jpg" alt="Yellow Hat" class="hat-icon">
+                    <img src="images/yellowhat.avif" alt="Yellow Hat" class="hat-icon">
                     <h3 class="yellow-hat">Yellow Hat (Logical Positive)</h3>
                 </div>
                 <p>Thinking with the Yellow Hat, we focused on why a simplified version would work brilliantly. The primary value isn't in real-time data; it's in the curated filters. A simple, fast-loading site that reliably tells a student where to find a quiet coffee shop with good Wi-Fi and outlets is incredibly valuable. We agreed that even a static list, beautifully organized and easy to search, would be a huge success for a class project and genuinely helpful for users. Its success would be measured by its usability and clarity, not by complex community features.</p>
@@ -68,7 +68,7 @@
             <section class="summary-section">
                 <h2>How My Project Has Changed as a Result of This Discussion</h2>
                 <div class="summary-content">
-                    <img src="images/bluehat.jpg" alt="Blue Hat representing process control thinking style" class="dominant-hat">
+                    <img src="images/bluehat.webp" alt="Blue Hat representing process control thinking style" class="dominant-hat">
                     <p>This conversation was a crucial reality check that has dramatically simplified and improved my project plan. I am completely re-scoping "Study Haven" from a dynamic platform to a statically generated, curated guide. I will remove all specifications for user accounts, real-time updates, and crowd-sourced reviews. The new core functionality is a single page with a list of 20-30 hand-picked locations around my campus. I will implement simple client-side filtering (for noise level, outlets, etc.) using JavaScript. Each location will have the essential details I can reliably research (Wi-Fi, hours, outlet availability), along with a photo I take myself and a short, written "Pro-Tip." By embracing these limitations, I can create a polished, useful, and fully functional website within the semester that demonstrates core web development skills and solves the original problem in a practical, achievable way.</p>
                 </div>
             </section>
