--- a/asg6/index.html
+++ b/asg6/index.html
@@ -22,7 +22,7 @@
                     <img src="images/bluehat.webp" alt="Blue Hat" class="hat-icon">
                     <h3 class="blue-hat">Blue Hat (Process Control)</h3>
                 </div>
-                <p>I explained the Six Hats method to my partner, a fellow student who understands the constraints of a class project. Wearing the Blue Hat, I set the goal: to critically evaluate the "Study Haven" concept as a manageable, one-person website built within a single semester. We agreed to focus on what is feasible for a solo developer with limited time and budget, and to prioritize the core features that deliver the most value without being overly complex.</p>
+                <p>I explained the Six Hats method to my friend, a fellow UTD student who understands the constraints of a class project. Wearing the Blue Hat, I set the goal: to critically evaluate the "Study Haven" concept as a manageable, one-person website built within a single semester. We agreed to focus on what is feasible for a solo developer with limited time and budget, and to prioritize the core features that deliver the most value without being overly complex.</p>
             </section>
 
             <section class="hat-section">
