--- a/asg7/index.html
+++ b/asg7/index.html
@@ -3,13 +3,27 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Website Template (Please update for full credit)</title>
+	<title>Campaign Page</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-	<h1>Website Template</h1>
-	<p>Fork and use this template repo (a.k.a. "boilerplate") for any web project</p>
-	
+	<div class="section1">
+	<h1>Prospectful President: Hermione Granger</h1>
+	<h2>About Hermione Granger</h2>
+	<img src="https://www.google.com/url?sa=i&url=http%3A%2F%2Fwww.internationalhero.co.uk%2Fh%2Fhermoine.htm&psig=AOvVaw1mZ48BPpWnEUBeFf_aZ-ks&ust=1760028253872000&source=images&cd=vfe&opi=89978449&ved=0CBYQjRxqFwoTCIDK_qiGlZADFQAAAAAdAAAAABAK" alt="Hermione Granger"
+	<a href="https://en.wikipedia.org/wiki/Hermione_Granger" target="_blank">Wikipedia: Hermione Granger</a>.
+	<h2>Biography</h2>
+	<p>Hermione Granger is a fictional character that plays a key role in the Harry Potter series. She is an englihs Muggle-born witch that attends the Hogwarts School of Witchcraft and Wizardry. Hermione contributed to many battles and became an advocate for the better treatment of house elves. Later on she was also employed at the Department of Magical Law Enforcement, eradicating laws that were biased in favour of pure-bloods. </p>
+    <h2>Why would she make a good ruler?</h2>
+	<p>Hermione Granger is a highly intelligent and organized individual as demonstrated in her achievements mentioned in the section above. It is clear that she possesses a strong ethical compass and has a deep commitment to social justice for the disadvantaged or discriminated. All of her amazing characteristics show that she would bring a methodical and disciplined approach to the presidency, unlike many who fall easily into corruption. </p>
+	</div>
+	<div class="section2">
+	<h2>Hermione's Prospectful Running Mate: Ron Weasley</h2>
+	<h3>About Ron Weasley</h3>
+	<p>Ron Weasley is the husband of Hermione Granger. He has fought along Hermione's side for two Wizarding Wars, and will take on anything in order to protect his loved ones. He has extreme loyalty, bravery, and most importantly a sense of humor. He is a very likable character whom is kind and charming. All of his characteristics make him the ideal running mate with his indeniable preserverance and teamwork that he had gained alongside Hermione throughout the years. </p>
+	</div>
+	<div class="section3">
+	<h1>The Society for the Promotion of Elfish Welfare (S.P.E.W.) was an organisation founded in 1994 by Hermione Granger in response to what she saw as gross injustice in the treatment of house-elves at the 1994 Quidditch World Cup. Having been deeply upset at the treatment and general prospects of house-elves, both in Hogwarts and the rest of the wizarding world, Hermione set up S.P.E.W. in order to champion their rights and question their standing in wizarding law and Elf Legislation.</h1>
+	</div>
 </body>
 </html>
