--- a/asg7/index.html
+++ b/asg7/index.html
@@ -23,7 +23,8 @@
 	<p>Ron Weasley is the husband of Hermione Granger. He has fought along Hermione's side for two Wizarding Wars, and will take on anything in order to protect his loved ones. He has extreme loyalty, bravery, and most importantly a sense of humor. He is a very likable character whom is kind and charming. All of his characteristics make him the ideal running mate with his indeniable preserverance and teamwork that he had gained alongside Hermione throughout the years. </p>
 	</div>
 	<div class="section3">
-	<h1>The Society for the Promotion of Elfish Welfare (S.P.E.W.) was an organisation founded in 1994 by Hermione Granger in response to what she saw as gross injustice in the treatment of house-elves at the 1994 Quidditch World Cup. Having been deeply upset at the treatment and general prospects of house-elves, both in Hogwarts and the rest of the wizarding world, Hermione set up S.P.E.W. in order to champion their rights and question their standing in wizarding law and Elf Legislation.</h1>
+	<h2>About Hermione Granger's Campaign</h2>
+	<p>The Society for the Promotion of Elfish Welfare (S.P.E.W.) was an organisation founded in 1994 by Hermione Granger in response to what she saw as gross injustice in the treatment of house-elves at the 1994 Quidditch World Cup. Having been deeply upset at the treatment and general prospects of house-elves, both in Hogwarts and the rest of the wizarding world, Hermione set up S.P.E.W. in order to champion their rights and question their standing in wizarding law and Elf Legislation.</p>
 	</div>
 </body>
 </html>
