--- a/asg7/index.html
+++ b/asg7/index.html
@@ -11,7 +11,7 @@
 	<h1>Prospectful President: Hermione Granger</h1>
 	<h2>About Hermione Granger</h2>
 	<img src="images/hermione.webp" alt="Hermione Granger">
-	<a href="https://en.wikipedia.org/wiki/Hermione_Granger" target="_blank">Wikipedia: Hermione Granger</a>.
+	<a href="https://en.wikipedia.org/wiki/Hermione_Granger" target="_blank">Wikipedia: Hermione Granger</a>
 	<h2>Biography</h2>
 	<p>Hermione Granger is a fictional character that plays a key role in the Harry Potter series. She is an englihs Muggle-born witch that attends the Hogwarts School of Witchcraft and Wizardry. Hermione contributed to many battles and became an advocate for the better treatment of house elves. Later on she was also employed at the Department of Magical Law Enforcement, eradicating laws that were biased in favour of pure-bloods. </p>
     <h2>Why would she make a good ruler?</h2>
