--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 							<li><a href="./asg5/dinner-invitation.html">Assignment 5: Dinner Invitation</a></li>
                             <li><a href="./asg6/index.html">Assignment 6</a></li>
                             <li><a href="./asg7/index.html">Assignment 7</a></li>
+                            <li><a href="./asg7/wireframes.html">Wireframes</a></li>
 	
                     </ul>
                 </section>
