--- a/asg7/wireframes.html
+++ b/asg7/wireframes.html
@@ -20,7 +20,7 @@
             <p>According to the UXPin guide, sketching wireframes offers significant advantages in <strong>speed and flexibility</strong>, allowing designers to quickly iterate on paper without technical constraints. This analog approach provides <strong>limited distractions</strong>, helping teams focus purely on information architecture and user flows rather than visual design details. However, sketching has notable disadvantages including <strong>duplicate work</strong> since sketches must be recreated digitally, <strong>low-fidelity limitations</strong> that make it difficult to show interactions or test user flows, and poor <strong>collaboration capabilities</strong> without version control or easy sharing. For these reasons, many teams—including mine for Study Haven—opt for digital wireframing tools that balance speed with better communication capabilities.</p>
             
             <h3>Recommended Wireframing Style for Study Haven</h3>
-            <p>For my <strong>Study Haven</strong> project, I chose <strong>low-fidelity digital wireframing</strong> using basic design tools, which proved to be the most effective approach. This method allowed me to quickly establish the core structure and information hierarchy of all four pages—Home, About Us, Featured Places, and Contact Us—while maintaining the flexibility to iterate rapidly. As emphasized in the UXPin guide, this approach helped me "focus on the product structure, content, information hierarchy, functionality, and behavior" without getting distracted by visual design elements. The digital format enabled clear communication of key components like navigation systems, form elements, content organization, and basic user interactions, while remaining fast to modify as the design evolved. This balanced approach delivered the speed benefits of sketching with the clarity and shareability of digital tools, perfectly suiting Study Haven's needs during the early conceptual phase.</p>
+            <p>For my <strong>Study Haven</strong> project, I chose <strong>low-fidelity digital wireframing</strong> using basic design tools, which proved to be the most effective approach. This method allowed me to quickly establish the core structure and information hierarchy of all four pages, which are Home, About Us, Featured Places, and Contact Us—while maintaining the flexibility to iterate rapidly. As emphasized in the UXPin guide, this approach helped me focus on the product structure, content, information hierarchy, functionality, and behavior without getting distracted by visual design elements. The digital format enabled clear communication of key components like navigation systems, form elements, content organization, and basic user interactions, while remaining fast to modify as the design evolved. This balanced approach delivered the speed benefits of sketching with the clarity and shareability of digital tools, perfectly suiting Study Haven's needs during the early conceptual phase.</p>
         </section>
 
         <section class="section3">
@@ -29,16 +29,16 @@
             <strong>Project:</strong> Study Haven</p>
 
             <h3>Home Page Wireframe</h3>
-            <img src="StudyHaven Home.png" alt="Study Haven Home Page Wireframe" style="width: 100%; max-width: 800px; border: 1px solid #ccc; margin: 10px 0;">
+            <img src="homepage.png" alt="Study Haven Home Page Wireframe" style="width: 100%; max-width: 800px; border: 1px solid #ccc; margin: 10px 0;">
 
             <h3>About Us Page Wireframe</h3>
-            <img src="About Us.png" alt="Study Haven About Us Page Wireframe" style="width: 100%; max-width: 800px; border: 1px solid #ccc; margin: 10px 0;">
+            <img src="aboutus.png" alt="Study Haven About Us Page Wireframe" style="width: 100%; max-width: 800px; border: 1px solid #ccc; margin: 10px 0;">
 
             <h3>Featured Places Page Wireframe</h3>
-            <img src="Featured Places.png" alt="Study Haven Featured Places Page Wireframe" style="width: 100%; max-width: 800px; border: 1px solid #ccc; margin: 10px 0;">
+            <img src="featuredplaces.png" alt="Study Haven Featured Places Page Wireframe" style="width: 100%; max-width: 800px; border: 1px solid #ccc; margin: 10px 0;">
 
             <h3>Contact Us Page Wireframe</h3>
-            <img src="Contact Us.png" alt="Study Haven Contact Us Page Wireframe" style="width: 100%; max-width: 800px; border: 1px solid #ccc; margin: 10px 0;">
+            <img src="contactus.png" alt="Study Haven Contact Us Page Wireframe" style="width: 100%; max-width: 800px; border: 1px solid #ccc; margin: 10px 0;">
         </section>
     </div>
 </body>
