--- a/asg7/wireframes.html
+++ b/asg7/wireframes.html
@@ -29,16 +29,16 @@
             <strong>Project:</strong> Study Haven</p>
 
             <h3>Home Page Wireframe</h3>
-            <img src="homepage.png" alt="Study Haven Home Page Wireframe" style="width: 100%; max-width: 800px; border: 1px solid #ccc; margin: 10px 0;">
+            <img src="images/homepage.png" alt="Study Haven Home Page Wireframe" style="width: 100%; max-width: 800px; border: 1px solid #ccc; margin: 10px 0;">
 
             <h3>About Us Page Wireframe</h3>
-            <img src="aboutus.png" alt="Study Haven About Us Page Wireframe" style="width: 100%; max-width: 800px; border: 1px solid #ccc; margin: 10px 0;">
+            <img src="images/aboutus.png" alt="Study Haven About Us Page Wireframe" style="width: 100%; max-width: 800px; border: 1px solid #ccc; margin: 10px 0;">
 
             <h3>Featured Places Page Wireframe</h3>
-            <img src="featuredplaces.png" alt="Study Haven Featured Places Page Wireframe" style="width: 100%; max-width: 800px; border: 1px solid #ccc; margin: 10px 0;">
+            <img src="images/featuredplaces.png" alt="Study Haven Featured Places Page Wireframe" style="width: 100%; max-width: 800px; border: 1px solid #ccc; margin: 10px 0;">
 
             <h3>Contact Us Page Wireframe</h3>
-            <img src="contactus.png" alt="Study Haven Contact Us Page Wireframe" style="width: 100%; max-width: 800px; border: 1px solid #ccc; margin: 10px 0;">
+            <img src="images/contactus.png" alt="Study Haven Contact Us Page Wireframe" style="width: 100%; max-width: 800px; border: 1px solid #ccc; margin: 10px 0;">
         </section>
     </div>
 </body>
