--- a/asg7/index.html
+++ b/asg7/index.html
@@ -20,6 +20,7 @@
 	<div class="section2">
 	<h2>Hermione's Prospectful Running Mate: Ron Weasley</h2>
 	<h3>About Ron Weasley</h3>
+	<img src="images/ronweasley.jpg" alt="Ron Weasley">
 	<p>Ron Weasley is the husband of Hermione Granger. He has fought along Hermione's side for two Wizarding Wars, and will take on anything in order to protect his loved ones. He has extreme loyalty, bravery, and most importantly a sense of humor. He is a very likable character whom is kind and charming. All of his characteristics make him the ideal running mate with his indeniable preserverance and teamwork that he had gained alongside Hermione throughout the years. </p>
 	</div>
 	<div class="section3">
