--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 							<li><a href="./asg4/sitemap.html">Assignment 4: Sitemap</a></li>
 							<li><a href="./asg5/dinner-invitation.html">Assignment 5: Dinner Invitation</a></li>
                             <li><a href="./asg6/index.html">Assignment 6</a></li>
-                            <li><a href="./asg7/index.html">Assignment 7</a></li>
-                            <li><a href="./asg7/wireframes.html">Wireframes</a></li>
+                            <li><a href="./asg7/index.html">Assignment 7: Campaign</a></li>
+                            <li><a href="./asg7/wireframes.html">Assignment 7: Wireframes</a></li>
 	
                     </ul>
                 </section>
