--- a/asg8/domains.html
+++ b/asg8/domains.html
@@ -14,7 +14,7 @@
 
 	<main class="content-wrapper">
 		<section class="list-section card">
-			<h2 class="list-title">List of Three Potential Domain Names</h2>
+			<h2 class="list-title"><strong>List of Three Potential Domain Names</strong></h2>
 			<ul class="domain-list">
 				<li class="domain-item">studywithhain.com</li>
 				<li class="domain-item">studyhaven.academy</li>
@@ -23,7 +23,7 @@
 		</section>
 
 		<section class="discussion-section card">
-			<h3>Discussion</h3>
+			<h3><strong>Discussion</strong></h3>
 			<p>During our brainstorming session, my classmate and I generated numerous words related to our platforms. We debated whether to incorporate a clever pun, use our actual names in the domain, or stick with a straightforward site name. Our primary goal was ensuring the domain name clearly corresponds to the website's purpose so visitors would immediately understand what we offer. We emphasized the importance of creating something both memorable and relevant, as these factors would be crucial for building recognition and attracting our target audience.</p>
 			
 			<p>After evaluating all three options, I prefer <strong class="chosen-domain">studyhaven.space</strong> as my domain name. While studywithhain.com costs $9.98 per year and studyhaven.academy costs $6.98 per year, studyhaven.space is remarkably affordable at only $0.98 per year, making it the most cost-effective choice for my budget. Beyond the price advantage and the fact that the domain contains my planned site name, "studyhaven" conveys a welcoming, safe space for learning without relying on personal names, making it more universal and scalable. The .space extension adds a modern feel and reinforces the idea of a dedicated area for studying, while keeping the domain memorable and directly relevant to my purpose.</p>
