Update title and content for midterm project

--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Website Template (Please update for full credit)</title>
+	<title>Midterm Project</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -17,8 +17,8 @@
 	</ul>
 </nav>
 
-	<h1>Website Template</h1>
-	<p>Fork and use this template repo (a.k.a. "boilerplate") for any web project</p>
+	<h1>Hain Song's Midterm Project</h1>
+	<p>My project will go here</p>
 	
 </body>
 </html>
