--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -3,22 +3,60 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Midterm Project</title>
+	<title>Bahamas Paradise - Home</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<nav>
-	<ul>
-		<li><a href="index.html">Home</a></li>
-		<li><a href="activities.html">Things To Do</a></li>
-		<li><a href="dining.html">Where to Eat</a></li>
-		<li><a href="statement.html">Design Statement</a></li>
-		<li><a href="contact.html">Contact Us</a></li>
-	</ul>
-</nav>
+	<header>
+		<nav>
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="activities.html">Things To Do</a></li>
+				<li><a href="dining.html">Where to Eat</a></li>
+				<li><a href="statement.html">Design Statement</a></li>
+				<li><a href="contact.html">Contact Us</a></li>
+			</ul>
+		</nav>
+	</header>
 
-	<h1>Hain Song's Midterm Project</h1>
-	<p>My project will go here</p>
-	
+	<main>
+		<section class="hero">
+			<h1>Welcome to the Bahamas</h1>
+			<p>Crystal clear waters and pristine beaches await you</p>
+			<div class="cta-buttons">
+				<button class="cta">Book Now</button>
+				<button class="cta">Contact Us</button>
+				<button class="cta">Request Info</button>
+			</div>
+		</section>
+
+		<section class="intro">
+			<h2>Experience Paradise</h2>
+			<p>The Bahamas is an archipelago of 700 islands and cays located in the Atlantic Ocean. With its stunning turquoise waters, white sandy beaches, and vibrant culture, it's the perfect destination for your dream vacation.</p>
+			
+			<div class="highlights">
+				<div class="factoid">
+					<h3>700 Islands</h3>
+					<p>Explore hundreds of unique islands and cays</p>
+				</div>
+				<div class="factoid">
+					<h3>Year-Round Sunshine</h3>
+					<p>Perfect tropical climate with warm temperatures</p>
+				</div>
+				<div class="factoid">
+					<h3>Rich Culture</h3>
+					<p>Experience Junkanoo festivals and local traditions</p>
+				</div>
+			</div>
+		</section>
+	</main>
+
+	<footer>
+		<div class="footer-content">
+			<p>&copy; 2023 Bahamas Tourism</p>
+			<p>Contact: info@bahamastourism.com | 1-800-BAHAMAS</p>
+			<p>Nassau, Bahamas</p>
+		</div>
+	</footer>
 </body>
 </html>
