--- a/Midterm/statement.html
+++ b/Midterm/statement.html
@@ -25,11 +25,11 @@
 		<section class="statement">
 			<h2>Visual & Interaction Design Choices</h2>
 			
-			<p>For this Bahamas destination website, I chose a color palette inspired by the Bahamian flag and natural environment. The primary colors are aqua blue (#00A0B0), golden yellow (#FFC72C), and black (#000000), which represent the ocean, sun, and strength of the Bahamian people. These colors immediately evoke the tropical feeling of the islands while maintaining good readability and visual hierarchy.</p>
+			<p>For this Bahamas destination website, I chose a color palette inspired by the Bahamian flag and natural environment. The primary colors are aqua blue (#00A0B0), golden yellow (#FFC72C), and black (#000000), which represent the ocean, sun, and strength of the Bahamian people. These colors immediately evoke the tropical feeling of the islands while maintaining good readability and visual hierarchy. The aqua blue creates a refreshing, oceanic feel throughout the site, while the golden yellow provides warm accents that draw attention to important elements like call-to-action buttons.</p>
 			
-			<p>The typography uses two complementary Google Fonts: 'Open Sans' for body text due to its excellent readability on screens, and 'Montserrat' for headings to create visual interest and hierarchy. The navigation menu uses a clean, centered layout with rounded buttons that provide clear visual feedback when hovered. CTA buttons are prominently placed on the homepage to encourage user engagement, using the contrasting yellow color to draw attention while maintaining the overall color scheme.</p>
+			<p>The typography uses two complementary Google Fonts: 'Abel' for headings and navigation, and 'Abhaya Libre' for body text. Abel is a clean, modern sans-serif font with slightly condensed letterforms that works exceptionally well for display text. Its uppercase treatment in headings creates a strong, confident presence that aligns with the vibrant energy of the Bahamas. Abhaya Libre, used in its bold weight (700) for body text, provides excellent readability with its traditional serif characteristics. The contrast between the modern Abel and the elegant Abhaya Libre creates visual interest while maintaining professionalism. This pairing balances contemporary design with timeless readability.</p>
 			
-			<p>Image selection focuses on high-quality, vibrant photos that showcase the beauty of the Bahamas - crystal clear waters, white sandy beaches, and cultural experiences. The layout uses ample white space to prevent visual clutter and let the images speak for themselves. Each activity and restaurant section follows a consistent pattern of image followed by descriptive text, creating a rhythm that makes the content easy to scan and digest. The overall design aims to be inviting, easy to navigate, and reflective of the relaxing yet exciting vacation experience the Bahamas offers.</p>
+			<p>The navigation menu uses a clean, centered layout with rounded buttons that provide clear visual feedback when hovered. CTA buttons are prominently placed on the homepage using the contrasting yellow color to draw attention while maintaining the overall color scheme. Image selection focuses on high-quality, vibrant photos that showcase the beauty of the Bahamas - crystal clear waters, white sandy beaches, and cultural experiences. The layout uses ample white space to prevent visual clutter and let the images speak for themselves. Each activity and restaurant section follows a consistent pattern of image followed by descriptive text, creating a rhythm that makes the content easy to scan and digest. The overall design aims to be inviting, easy to navigate, and reflective of the relaxing yet exciting vacation experience the Bahamas offers, while the font pairing specifically enhances both the modern appeal and traditional reliability that travelers seek in a vacation destination.</p>
 		</section>
 
 		<section class="citations">
@@ -38,6 +38,8 @@
 				<li>Bahamas information: <a href="https://www.bahamas.com/">Official Bahamas Tourism Site</a></li>
 				<li>All images from: <a href="https://unsplash.com/">Unsplash</a></li>
 				<li>Fonts from: <a href="https://fonts.google.com/">Google Fonts</a></li>
+				<li>Abel font: <a href="https://gwfh.mrancart.com/ajax/apis/fonts#abel">Google Web Fonts Helper - Abel</a></li>
+				<li>Abhaya Libre font: <a href="https://gwfh.mrancart.com/ajax/apis/fonts#abhaya-libre">Google Web Fonts Helper - Abhaya Libre</a></li>
 			</ul>
 		</section>
 	</main>
